fix: dark mode logo

--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -193,3 +193,9 @@
 .limit-width {
   @apply max-w-7xl mx-auto;
 }
+
+::view-transition-old(root),
+::view-transition-new(root) {
+  animation: none;
+  mix-blend-mode: normal;
+}
